fix(about): admins are aligned to center, this behaviour has the best looking layout behaviour

--- a/app/client/stylesheets/components/pu-list.sass
+++ b/app/client/stylesheets/components/pu-list.sass
@@ -20,6 +20,18 @@
     &-right
         text-align: right
 
+    &-center
+        text-align: center
+        text-align-last: center
+
+        > li
+            text-align: auto
+            text-align-last: auto
+
+    &-justify
+        text-align: justify
+        text-align-last: justify
+
     &-horizontal
         font-size: 0
 
